# ControlTerminal

./: Cargo.toml  README.md  build.rs  config.rs
src/: app.rs  main.rs  utils.rs
src/commands/: builtins.rs  mod.rs
src/logger/: mod.rs
src/terminal/: context.rs  mod.rs
