[package]
name = "ControlTerminal"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.27"
egui = "0.27"
chrono = "0.4"
sysinfo = "0.30"
whoami = "1.4"
dirs = "5.0"
meval = "0.2"
regex = "1.10"
filetime = "0.2"
image = { version = "0.25", default-features = false, features = ["ico", "png"] }
winreg = "0.50"
toml = "0.8"
serde = { version = "1.0", features = ["derive"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3                
lto = "fat"                  
codegen-units = 1            
strip = "symbols"            
panic = "abort"              
incremental = false          
debug = false                

[target.x86_64-pc-windows-msvc]
rustflags = ["-C", "target-feature=+crt-static"]  # Статическая линковка CRT
